fix the length of icon on mobile

--- a/css/contact.css
+++ b/css/contact.css
@@ -55,6 +55,7 @@ header li:last-child:hover a{
 	vertical-align: middle;
 	margin: auto;
 	display: block;
+	max-width: 100%;
 }
 
 .content{
